Revision history for Mason

** marks an incompatible change

2.19  Apr 22, 2012

2.18  Apr 22, 2012

* Documentation
  - Add references to Poet, Mason's new companion web framework
  - Move Admin.pod to Setup.pod
  - Fix lots of broken links

2.17  Mar 27, 2012

* Documentation
  - Move FAQ pod sections up one level

* Fixes
  - Use make_immutable on generated Mason subclasses (Tomohiro Hosaka)
  - Properly quote paths when generating component class (Peter Franke)

2.16  Feb 24, 2012

* Documentation
  - Add Mason::Manual::FAQ, and various documentation improvements/fixes

* Fixes
  - Add prereq Exception::Class
  - Use Data::Dumper in Mason::Util

2.15  Nov 27, 2011

** Incompatible changes
  - Rename bin/mason to bin/mason.pl, to avoid conflict with the Mason firewall tool - RT #72497 (Florian)

* Fixes
  - Fix parser bug with filters and comment characters (Tomohiro Hosaka)

2.14  Sep 6, 2011

** Incompatible changes
  - Deprecate %%-lines, <%args> section and <%shared> section, which IMO add
    unnecessary TMTOWTDI. Standardize on the <%class> section and Moose 'has'
    declarations. These alternate syntaxes may make it into a plugin.

* Improvements
  - Allow applications to specify Mason subclasses by naming convention.
  - Document use of Mason subclasses in Mason::Manual::Subclasses.

* Fixes
  - Respect Mason::CodeCache plugins (bokutin)
  - Allow comments after filter markers {{ and }}

2.13  Jul 26, 2011

* Improvements
  - Add process_output, an easy way to modify all Mason output in a plugin or subclass

2.12  Jul 3, 2011

* Fixes
  - Fix $m->visit under PSGIHandler (Jozef Mojzis)
  - Fix $m->visit when initial out_method passed

2.11  Jun 29, 2011

* Fixes
  - Fix memory leaks between Interp, Request and Component; add test for leaks (StephenClouse)

2.10  Jun 23, 2011

* Fixes
  - Fix filter pipe syntax, broken in 2.09 - RT #69038 (MDIETRICH)
  - Specify and test execution order of multiple filters in pipe syntax