@@ -14,8 +14,8 @@ sub init_meta {
     my $for_class = $params{for_class};
     Method::Signatures::Simple->import( into => $for_class );
     Moose->init_meta(@_);
-    MooseX::StrictConstructor->import({ into => $for_class });
-    MooseX::HasDefaults::RO->import({ into => $for_class });
+    MooseX::StrictConstructor->import( { into => $for_class } );
+    MooseX::HasDefaults::RO->import( { into => $for_class } );
     {
         no strict 'refs';
         *{ $for_class . '::CLASS' } = sub () { $for_class };    # like CLASS.pm
