@@ -5,10 +5,10 @@ use base qw(Mason::Component::Moose);
 Moose::Exporter->setup_import_methods();
 
 sub init_meta {
-    my $class = shift;
+    my $class  = shift;
     my %params = @_;
     $class->SUPER::init_meta(@_);
-    MooseX::StrictConstructor->import({ into => $params{for_class} });
+    MooseX::StrictConstructor->import( { into => $params{for_class} } );
 }
 
 1;
